# brain-dead-recipes

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
assets/: styles.css
client/: add-ingredients.ts  index.ts  ingredient-dialog.ts  ingredient-input.ts
migrations/: 20240313012509_initial.sql  20240314000911_example_ingredients.sql  20240317164303_example_recipes.sql
src/: handlers.rs  main.rs  models.rs  templates.rs
src/handlers/: recipe.rs
src/pages/: recipe.rs
src/pages/recipe/: extract.rs  handlers.rs
templates/: base.html  create-ingredient-dialog.html  index.html  ingredient-input.html  recipe-form.html  recipe-view.html  recipe.html  recipe_view.html  steps-partial.html
templates/recipe/: recipe-edit.html  recipe.html
web-components/: add-ingredients.ts  index.ts  ingredient-input.ts  style.css
