[package]
name = "brain-dead-recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["form", "query"] }
axum-htmx = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.5.0"

